--- a/HTML_CSS_Javascript/Assignments/module_3/index.html
+++ b/HTML_CSS_Javascript/Assignments/module_3/index.html
@@ -12,7 +12,7 @@
 <body>
 
   <header>
-    <nav id="header-nav" class="navbar navbar-default">
+    <nav id="header-nav" class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
@@ -33,7 +33,7 @@
       </div>
     </nav>
 
-    <h1 class="text-center">Our Menu</h1>
+    <h1 class="page-header text-center">Our Menu</h1>
   </header>
 
   <div class="container">
